# aoc-2024

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: CMakeLists.txt  coord.cpp  coord.hpp  grid.hpp  lift.hpp  split.hpp  unordered_dense.h
src/day01/: day01.cpp
src/day02/: day02.cpp
src/day03/: day03.cpp
src/day04/: day04.cpp
src/day05/: day05.cpp
src/day06/: coords_right  coords_wrong  coords_wrong_fixed  day06.cpp
src/day07/: day07.cpp
src/day08/: day08.cpp
src/day09/: day09.cpp
src/day10/: day10.cpp
src/day11/: day11.cpp
src/day12/: day12.cpp
src/day13/: day13.cpp
